# qtimaker

./: .env.example  README.md  pyproject.toml
make_gui_exe/: README.md  make_tk_exe.bat  qtimaker_tk.pyw
qtimaker/: cmdline.py  config.py  err.py  export.py  markdown.py  mcp_tools.py  qti.py  quiz.py  xml_assessment.py  xml_assessment_v2.py  xml_imsmanifest.py
qtimaker/gui/: tk.py
qtimaker/web/: app.py  config.py  mcp_bridge.py
qtimaker/web/routes/: questions.py  questions_docling.py  quiz_generation.py  upload.py
qtimaker/web/services/: docling_service.py  graphiti_service.py  rag_service.py
qtimaker/web/services/database/: neo4j.py  postgres.py
qtimaker/web/templates/: index.html
